<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrei.courtcounter.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/teamA"
                    android:textColor="@color/teamColor"
                    android:textSize="@dimen/_14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_24dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/scoreTeamA"
                    android:textSize="@dimen/_56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_24dp"
                    android:layout_marginRight="@dimen/_24dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/add_3_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_24dp"
                    android:layout_marginRight="@dimen/_24dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/add_2_points" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_24dp"
                    android:layout_marginRight="@dimen/_24dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:onClick="freeThrowForTeamA"
                    android:text="@string/add_1_point" />


            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@android:color/darker_gray"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teamB"
                    android:textSize="@dimen/_14sp"
                    android:textColor="@color/teamColor"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scoreTeamB"
                    android:textSize="@dimen/_56sp"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_24dp"
                    android:layout_gravity="center"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_24dp"
                    android:layout_marginRight="@dimen/_24dp"
                    android:text="@string/add_3_points"
                    android:onClick="addThreeForTeamB"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginLeft="@dimen/_24dp"
                    android:layout_marginRight="@dimen/_24dp"
                    android:text="@string/add_2_points"
                    android:onClick="addTwoForTeamB"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginLeft="@dimen/_24dp"
                    android:layout_marginRight="@dimen/_24dp"
                    android:text="@string/add_1_point"
                    android:onClick="freeThrowForTeamB"/>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="resetButton"
            android:layout_marginBottom="@dimen/_32dp"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />
</RelativeLayout>
